--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.ant-btn-primary {
+  color: #fff;
+  background-color: #dd4900;
+  box-shadow: 0 2px 0 rgba(255, 125, 5, 0.1);
+}
