feat: change primary color

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,6 @@
 
 .ant-btn-primary {
   color: #fff;
-  background-color: #dd4900;
+  background-color: #15803d;
   box-shadow: 0 2px 0 rgba(255, 125, 5, 0.1);
 }
